scripts/nullaway/annotator/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8.txt
../annotator/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/core/AcesHighCardComparator.java:27: error: [NullAway] dereferenced expression battleRanks.get(card1.getDenomination()) is @Nullable
        return battleRanks.get(card1.getDenomination()).compareTo(battleRanks.get(card2.getDenomination()));
                                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/Battle.java:55: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return battlers;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/Battle.java:162: error: [NullAway] enhanced-for expression battlers is @Nullable
        for (Player battler : battlers) {
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/Battle.java:209: error: [NullAway] dereferenced expression battlers is @Nullable
        for (Iterator<Player> it = battlers.iterator(); it.hasNext();) {
                                           ^
    (see http://t.uber.com/nullaway )
../annotator/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/BattleRoyaleGame.java:61: error: [NullAway] initializer method does not guarantee @NonNull fields gameCards (line 30), currentBattle (line 32) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public BattleRoyaleGame(BattleAssessor assessor) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/BattleRoyaleGame.java:163: error: [NullAway] dereferenced expression players is @Nullable
        List<Player> active = new ArrayList<>(players.size());
                                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/BattleRoyaleGame.java:202: error: [NullAway] unboxing of a @Nullable value
        return battlesByNbrOfContinuations.get(continuations);
                                              ^
    (see http://t.uber.com/nullaway )
../annotator/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/doors/DoorsGame.java:24: error: [NullAway] assigning @Nullable expression to @NonNull field
    private Card topCard = null;
                 ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url9512d8fa89_bdkosher_card_games_tgz-pJ8-org_washcom_cardgames_battleroyale_BattleRoyaleGameSimulatorJ8/src/org/washcom/cardgames/battleroyale/DefaultBattleAccessorTest.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
8 errors
